--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   flutter_sticky_header: "^0.4.2"
   gact_plugin:
     git:
-      url: git@github.com:covidtrace/contact_trace_plugin.git
+      url: https://github.com/covidtrace/contact_trace_plugin.git
+      ref: master
   http:
   intl:
   jaguar_jwt: ^2.1.6
